# webbpsf

./: .gitignore  .gitmodules  .pep8speaks.yml  .travis.yml  CITATION  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  PLAYGROUND_thermal_model.ipynb  README.md  README.rst  README.txt  README_RELEASE.txt  WFIRST Notebook Interface.ipynb  WFIRST_Tutorial.ipynb  WebbPSF-WFIRST_Tutorial.ipynb  WebbPSF_tutorial.ipynb  WebbPSF_wfirstCGI_tutorial.ipynb  ah_bootstrap.py  defsetup.py  environment.yml  make-data-sdist.sh  make-sdist.sh  opds.py  pep8speaks.yml  pyproject.toml  readthedocs.yml  requirements-numpydev.txt  requirements.txt  setup.cfg  setup.py  stsci_distutils_hack.py  tox.ini  webbpsf_icon.icns
.github/workflows/: ci_workflows.yml  publish-to-pypi.yml
dev_utils/: Fit Time-Variant Thermal OPDs From Model.ipynb  Get Throughputs from Pandeia.ipynb  MIMF_FP_Table_From_WAG.xlsx  Normalized Throughputs from Pandeia.ipynb  Plot SI MIMF Field Point Locations Wall Chart.ipynb  Plot SI WFE Field Dependence.ipynb  README-DEVEL.txt  WFE_extrapolation.ipynb  compute_psf_library.py  grab_opd_info.py  make-data-sdist.sh  make-minimal-datafiles.py  master_data_release.sh  package_filters.py  wfe_benchmark.py
dev_utils/field_dependence/: basis.py  get_wf_MI_multifield.seq  read_codev_dat_fits.py
docs/: Makefile  README figure.ipynb  api_reference.rst  available_opds.rst  conf.py  fft_optimization.rst  gui.rst  help.rst  index.rst  installation.rst  intro.rst  jwst.rst  jwst_detector_effects.ipynb  jwst_matching_psfs_to_data.ipynb  jwst_measured_opds.ipynb  jwst_optical_budgets.ipynb  jwst_wavefront_deltas.ipynb  more_examples.rst  more_examples_notebook.ipynb  performance.rst  poppy.rst  psf_grids.rst  references.rst  release.rst  relnotes.rst  roman.rst  rtd-pip-requirements  sampling.rst  usage.rst  webbpsf.rst  wfirst.rst
docs/_themes/theme_webbpsf/: layout.html  theme.conf
docs/field_dependence/: multifield_documentation.ipynb
docs/roman_figures/: how_tos.py
docsource/: Makefile  available_opds.rst  conf.py  fft_optimization.rst  gui.rst  index.rst  installation.rst  intro.rst  jwopt.rst  more_examples.rst  poppy.rst  references.rst  relnotes.rst  sampling.rst  webbpsf.rst
lib/: .OpticalTrainMW.py.swp  .poppy.py.swp  .trainDriverMW.py.swp  OpticalTrainMW.py  SFT.py  SFT_bak.py  SimpleFits.py  TODO.txt  __init__.py  fwcentroid.py  import_pupils.py  newgui.py  notes_anand (Autosaved).txt  notes_new (Autosaved).txt  notes_new.txt  obssim.py  popjw.py  poppy.py  test_MW.fits  test_fft.fits  test_mono.fits  trainDriverMW.py  utils.py  webbpsf.py  webbpsfgui.py
lib/testdata/: SFT1pupil.fits  SFT2pupil.fits
licenses/: LICENSE.txt
notebooks/: Adding Time-Variant Thermal OPDs to Your Main OPD - Coronagraphy.ipynb  Distortion_examples.ipynb  Example Construction of OPDs from Delta Slew Time.ipynb  Example Construction of OPDs from Delta Time After Slew.ipynb  Gridded_PSF_Library.ipynb  RomanCGI_F730_tests.ipynb  RomanCGI_F825_tests.ipynb  RomanCGI_deprecated_tests.ipynb  Roman_F730_tests.ipynb  Roman_F825_tests.ipynb  Roman_deprecated_tests.ipynb  Sign_Convention_tests.ipynb  Simulated OTE Mirror Move Demo.ipynb  Simulating PSF variation within JWST instruments.ipynb  Tutorial_in_SI_WFE.ipynb  WebbPSF-Roman_Tutorial.ipynb  WebbPSF-WFIRST_Tutorial.ipynb  WebbPSF_tutorial.ipynb  jwst_detector_effects.ipynb  more_examples.ipynb  proper_spcf730_result.fits  proper_spcf825_result.fits  psf.fits  roman_cgi_demo.ipynb  roman_coronagraph_demo.ipynb  wfirst_cgi_demo.ipynb
notebooks/Field_dependence_documentation/: multifield_documentation.ipynb
scripts/: webbpsfgui
source/: SFT.py  TODO.txt  convert_psfs_revV.py  fwcentroid.py  import_pupils.py  jwopt.py  newgui.py  popjw.py  poppy.py  test_jwopt.py  test_poppy.py  test_webbpsf.py  utils.py  webbpsf.py  webbpsfgui.py
tests/: test_poppy.py  test_synphot.py  test_webbpsf.py
webbpsf/: __init__.py  _astropy_init.py  config.py  conftest.py  constants.py  convert_psfs_revV.py  detectors.py  distortion.py  distortions.py  gridded_library.py  import_pupils.py  jupyter_gui.py  jwxml.py  mast_wss.py  match_data.py  notes_new.txt  obssim.py  opds.py  optical_budget.py  optics.py  roman.py  settings.py  surs.py  tkgui.py  trending.py  utils.py  version.py  webbpsf.cfg  webbpsf.py  webbpsf_core.py  webbpsfgui.py  wfirst.py  wxgui.py
webbpsf/opdbender/: JWpupil_segments.fits  Piston segments.ipynb  webbopds.py
webbpsf/otelm/: JWST_influence_functions_control_with_sm.fits  NIRCam_WL_Empirical_Power.csv  README.txt  SMIF_hexike.csv  SMIF_zernike.csv  coarse_track1_sim_pointing.fits  coarse_track2_sim_pointing.fits  jwst_wfe_summary_from_optical_budget.csv  seg_sens.txt  thermal_OPD_fitting_parameters_9H_um.fits  thermal_slew_OPD_per_seg_gn_tau_9h.fits  thermal_slew_OPD_per_seg_gn_tau_9h_m.fits  thermal_slew_OPD_per_seg_gn_tau_9z.fits
webbpsf/pytest_plugin/: plugin.py
webbpsf/tests/: README.txt  __init__.py  coveragerc  test_detectors.py  test_distortion.py  test_errorhandling.py  test_fgs.py  test_jitter.py  test_miri.py  test_mrs.py  test_nircam.py  test_niriss.py  test_nirspec.py  test_opds.py  test_optical_budget.py  test_psfgrid.py  test_roman.py  test_synphot.py  test_trending.py  test_utils.py  test_webbpsf.py  test_webbpsf_new.py  test_wfirst.py  validate_vs_jwpsf.py  validate_webbpsf.py
webbpsf/tests/surs/: example_alldof_A1-SM_sur.xml  example_coarse_phasing_N2019041204_sur.xml  example_fine_phasing_R201902010S_sur.xml  example_global_alignment_N201902010F_sur.xml  example_image_stacking_O201904110E_sur.xml
