[build-system]
requires = ["setuptools >= 61.2",
            "setuptools_scm[toml]>=3.4.3",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "webbpsf"
description = "Creates simulated point spread functions for the James Webb Space Telescope"
authors = [{name = "Association of Universities for Research in Astronomy", email = "help@stsci.edu"}]
license = {file = "LICENSE.md"}
dynamic = ["version"]
readme = "README.rst"

requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.5.0",
    "matplotlib>=3.2.0",
    "astropy>=4.3.0",
    "photutils>=1.0.0",
    "poppy>=1.0.0",
    "pysiaf>=0.19.1",
    "soc_roman_tools>=0.1.0",
    "synphot>=1.0.0",
    "astroquery>=0.4.6",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-astropy",
]
docs = [
    "nbsphinx",
    "sphinx<7.0",
    "stsci_rtd_theme",
    "sphinx-astropy",
    "sphinx-automodapi",
    "sphinx-issues",
    "tomli; python_version <\"3.11\"",
]

[project.urls]
Homepage = "http://webbpsf.readthedocs.io/"
github_project = "https://github.com/spacetelescope/webbpsf"

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
"*" = ["*.fits, *.csv"]
"webbpsf.tests" = ["data/*"]

[tool.setuptools_scm]
write_to = "webbpsf/version.py"

[tool.pytest.ini_options]
minversion = "2.2"
testpaths = [
    "webbpsf/tests",
]
norecursedirs = [
    "build",
    "docs/_build",
]

astropy_header = "true"
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "-p no:warnings"


[tool.coverage.run]
source = ["webbpsf",]
omit = [
    "webbpsf/conftest*",
    "webbpsf/cython_version*",
    "webbpsf/setup_package*",
    "webbpsf/*/setup_package*",
    "webbpsf/*/*/setup_package*",
    "webbpsf/tests/*",
    "webbpsf/*/tests/*",
    "webbpsf/*/*/tests/*",
    "webbpsf/version*",
    "*/webbpsf/conftest*",
    "*/webbpsf/cython_version*",
    "*/webbpsf/setup_package*",
    "*/webbpsf/*/setup_package*",
    "*/webbpsf/*/*/setup_package*",
    "*/webbpsf/tests/*",
    "*/webbpsf/*/tests/*",
    "*/webbpsf/*/*/tests/*",
    "*/webbpsf/version*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "webbpsf/conftest*",
    "webbpsf/cython_version*",
    "webbpsf/setup_package*",
    "webbpsf/*/setup_package*",
    "webbpsf/*/*/setup_package*",
    "webbpsf/tests/*",
    "webbpsf/*/tests/*",
    "webbpsf/*/*/tests/*",
    "webbpsf/version*",
    "*/webbpsf/conftest*",
    "*/webbpsf/cython_version*",
    "*/webbpsf/setup_package*",
    "*/webbpsf/*/setup_package*",
    "*/webbpsf/*/*/setup_package*",
    "*/webbpsf/tests/*",
    "*/webbpsf/*/tests/*",
    "*/webbpsf/*/*/tests/*",
    "*/webbpsf/version*",
]
