[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = webbpsf
description = 'Creates simulated point spread functions for the James Webb Space Telescope'
long_description = (this placeholder string will be replaced automatically with webbpsf's top-level docstring.)
include_package_data=True
author = Association of Universities for Research in Astronomy
author_email = help@stsci.edu
license = BSD
url = http://webbpsf.readthedocs.io/
edit_on_github = False
github_project = mperrin/webbpsf

# Python code quality checker
[flake8]
exclude: .git,__pycache__, test*
max-line-length = 120
