[metadata]
name = webbpsf
description = 'Creates simulated point spread functions for the James Webb Space Telescope'
long_description = "WebbPSF produces simulated PSFs for the James Webb Space Telescope, NASA's next flagship infrared space telescope. WebbPSF can simulate images for any of the four science instruments plus the fine guidance sensor, including both direct imaging and coronagraphic modes."
include_package_data=True
author = Association of Universities for Research in Astronomy
author_email = help@stsci.edu
license = BSD
license_file = LICENSE.md
url = http://webbpsf.readthedocs.io/
edit_on_github = False
github_project = spacetelescope/webbpsf

# Python code quality checker
[flake8]
exclude: .git,__pycache__, test*
max-line-length = 120

[options]
zip_safe = False
packages = find:
install_requires =
    numpy>=1.18.0
    scipy>=1.5.0
    matplotlib>=3.2.0
    astropy>=4.0.0
    photutils>=1.0.0
    poppy>=1.0.0
    pysiaf>=0.11.0
    synphot>=1.0.0
python_requires = >=3.8
setup_requires = setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-astropy
docs =
    nbsphinx
    stsci_rtd_theme
    sphinx-astropy
    sphinx_rtd_theme
    sphinx-automodapi
    sphinx-issues

[options.package_data]
* = *.fits, *.csv
webbpsf.tests = data/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = webbpsf docs
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = -p no:warnings

[coverage:run]
source = webbpsf
omit =
   webbpsf/conftest*
   webbpsf/cython_version*
   webbpsf/setup_package*
   webbpsf/*/setup_package*
   webbpsf/*/*/setup_package*
   webbpsf/tests/*
   webbpsf/*/tests/*
   webbpsf/*/*/tests/*
   webbpsf/version*
   */webbpsf/conftest*
   */webbpsf/cython_version*
   */webbpsf/setup_package*
   */webbpsf/*/setup_package*
   */webbpsf/*/*/setup_package*
   */webbpsf/tests/*
   */webbpsf/*/tests/*
   */webbpsf/*/*/tests/*
   */webbpsf/version*

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
omit =
   webbpsf/conftest*
   webbpsf/cython_version*
   webbpsf/setup_package*
   webbpsf/*/setup_package*
   webbpsf/*/*/setup_package*
   webbpsf/tests/*
   webbpsf/*/tests/*
   webbpsf/*/*/tests/*
   webbpsf/version*
   */webbpsf/conftest*
   */webbpsf/cython_version*
   */webbpsf/setup_package*
   */webbpsf/*/setup_package*
   */webbpsf/*/*/setup_package*
   */webbpsf/tests/*
   */webbpsf/*/tests/*
   */webbpsf/*/*/tests/*
   */webbpsf/version*
